--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-jest": "22.1.0",
     "babel-preset-react-native": "4.0.0",
     "jest": "22.1.4",
+    "eslint-config-rallycoding": "^3.2.0",
     "react-test-renderer": "16.2.0"
   },
   "jest": {
